--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,15 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: Seriousman.org
+subtitle: "Breakfasting slowly"
+#email: blcentra@gmail.com
+name: Jacinto Calvo
 description: > 
-  A simple yet classy theme for your Jekyll website or blog.
-baseurl: "/centrarium/" # the subpath of your site, e.g. /blog/
-url: "http://bencentra.github.io" # the base hostname & protocol for your site
+  This is a personal site where I leave data.
+#baseurl: "/centrarium/" # the subpath of your site, e.g. /blog/
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "http://seriousman.org" # the base hostname & protocol for your site
 cover: "assets/header_image.jpg"
 logo: "assets/logo.png"
 
@@ -34,7 +35,7 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-disqus_shortname: bencentra
+# disqus_shortname: bencentra
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
@@ -65,101 +66,101 @@ descriptions:
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
+    username: netmanito
+    url: https://twitter.com/netmanito
     desc: Follow me on Twitter
     share: true
 
-  - name: Facebook
-    icon: facebook
-    username: thebencentra
-    url: 
-    desc: Friend me on Facebook
-    share: true
+#  - name: Facebook
+#    icon: facebook
+#    username: thebencentra
+#    url: 
+#    desc: Friend me on Facebook
+#    share: true
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: netmanito
+    url: https://github.com/netmanito
     desc: Fork me on GitHub
     share: false
 
-  - name: LinkedIn
-    icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
-    desc: Connect with me on LinkedIn
-    share: true
+#  - name: LinkedIn
+#    icon: linkedin
+#    username: Jacinto Calvo
+#    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+#    desc: Connect with me on LinkedIn
+#    share: true
 
-  - name: Google+
-    icon: google-plus
-    username: 
-    url: 
-    desc: Add me to your Circles
-    share: true
+#  - name: Google+
+#    icon: google-plus
+#    username: 
+#    url: 
+#    desc: Add me to your Circles
+#    share: true
 
-  - name: YouTube
-    icon: youtube
-    username: 
-    url: 
-    desc: Subscribe on YouTube
-    share: false
+#  - name: YouTube
+#    icon: youtube
+#    username: 
+#    url: 
+#    desc: Subscribe on YouTube
+#    share: false
 
-  - name: Instagram
-    icon: instagram
-    username: 
-    url: 
-    desc: Follow me on Instagram
-    share: false
+#  - name: Instagram
+#    icon: instagram
+#    username: 
+#    url: 
+#    desc: Follow me on Instagram
+#    share: false
 
-  - name: Pinterest
-    icon: pinterest
-    username: 
-    url: 
-    desc: Follow me on Pinterest
-    share: true
+#  - name: Pinterest
+#    icon: pinterest
+#    username: 
+#    url: 
+#    desc: Follow me on Pinterest
+#    share: true
 
-  - name: SoundCloud
-    icon: soundcloud
-    username: 
-    url: 
-    desc: Follow me on SoundCloud
-    share: false
+#  - name: SoundCloud
+#    icon: soundcloud
+#    username: 
+#    url: 
+#    desc: Follow me on SoundCloud
+#    share: false
 
-  - name: Tumblr
-    icon: tumblr
-    username: 
-    url: 
-    desc: Follow me on Tumblr
-    share: false
+#  - name: Tumblr
+#    icon: tumblr
+#    username: 
+#    url: 
+#    desc: Follow me on Tumblr
+#    share: false
 
-  - name: Steam
-    icon: steam
-    username: 
-    url: 
-    desc: Friend me on Steam
-    share: false
+#  - name: Steam
+#    icon: steam
+#    username: 
+#    url: 
+#    desc: Friend me on Steam
+#    share: false
 
-  - name: Dribbble
-    icon: dribbble
-    username: 
-    url: 
-    desc: Follow me on Dribble
-    share: false
+#  - name: Dribbble
+#    icon: dribbble
+#    username: 
+#    url: 
+#    desc: Follow me on Dribble
+#    share: false
 
-  - name: Vimeo
-    icon: vimeo-square
-    username: 
-    url: 
-    desc: Follow me on Vimeo
-    share: false
+#  - name: Vimeo
+#    icon: vimeo-square
+#    username: 
+#    url: 
+#    desc: Follow me on Vimeo
+#    share: false
 
-  - name: Vine
-    icon: vine
-    username: 
-    url: 
-    desc: Follow me on Vine
-    share: false
+#  - name: Vine
+#    icon: vine
+#    username: 
+#    url: 
+#    desc: Follow me on Vine
+#    share: false
 
 # Social sharing protocols
 # These are for automatically generating sharing metadata for FB and Twitter
