--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ jekyll-archives:
 # disqus_shortname: bencentra
 
 # Google analytics
-# ga_tracking_id: "UA-XXXX-1"
+ ga_tracking_id: "UA-4720623-1"
 
 # Category descriptions (for archive pages)
 descriptions:
