--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ highlightjs_theme: "monokai_sublime"
 #    tag: '/tag/:name/'
 
 # Disqus comments
-disqus_shortname: bencentra
+disqus_shortname: 
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
