--- a/_config.yml
+++ b/_config.yml
@@ -83,15 +83,15 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: netmanito
+    url: https://github.com/netmanito
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: Jacinto Calvo Sintes
+    url: https://es.linkedin.com/in/jacinto-calvo-sintes-1837833
     desc: Connect with me on LinkedIn
     share: false
 
